add Google Analytics Tracking ID

--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ site-css:
 # --- Web Analytics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: ""
+gtag: "G-FMC7DHCBQ1"
 
 # Fill in your Google Analytics ID to track your website using Google Analytics
 #google_analytics: ""
