--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "ech.chebaby@gmail.com"
+  email: "contact.chebaby@gmail.com"
   github: chebaby
   twitter: __chebaby
 #  reddit: yourname
