add url to _config

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@ author: Nour-Eddine ECH-CHEBABY
 
 # --- List of links in the navigation bar --- #
 
+url: "https://echebaby.com"
+
 navbar-links:
   Author's home: "https://echebaby.com"
 
